ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.6, 2.5.1
    • Affects Version/s: 2.4.3
    • Component/s: Internal Code
    • None
    • Environment:
      Solaris 10
    • Fully Compatible
    • Solaris
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Along with backtrace (SERVER-7080) and posix_fadvise (SERVER-7404), there is an unresolved symbol "strcasestr" on Solaris 10 in mongod version 2.4.

      ~/mongodb-sunos5-x86_64-2.4.3/bin
      $ env LD_LIBRARY_PATH=. ldd -r ./mongod
              libsocket.so.1 =>        /lib/64/libsocket.so.1
              libresolv.so.2 =>        /lib/64/libresolv.so.2
              librt.so.1 =>    /lib/64/librt.so.1
              libnsl.so.1 =>   /lib/64/libnsl.so.1
              libstdc++.so.6 =>        ./libstdc++.so.6
              libm.so.2 =>     /lib/64/libm.so.2
              libgcc_s.so.1 =>         ./libgcc_s.so.1
              libpthread.so.1 =>       /lib/64/libpthread.so.1
              libc.so.1 =>     /lib/64/libc.so.1
              libaio.so.1 =>   /lib/64/libaio.so.1
              libmd.so.1 =>    /lib/64/libmd.so.1
              libmp.so.2 =>    /lib/64/libmp.so.2
              libscf.so.1 =>   /lib/64/libscf.so.1
              libdoor.so.1 =>  /lib/64/libdoor.so.1
              libuutil.so.1 =>         /lib/64/libuutil.so.1
              libgen.so.1 =>   /lib/64/libgen.so.1
              symbol not found: posix_fadvise         (mongod)
              symbol not found: strcasestr            (mongod)
              symbol not found: backtrace             (mongod)
              symbol not found: backtrace_symbols_fd          (mongod)
              symbol not found: backtrace_symbols             (mongod)
      

      The symbol is referenced from src/mongo/db/fts/fts_matcher.cpp line 241. The code has a workaround for Windows (#ifdef _WIN32) but otherwise assumes that the routine is available.

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: