src/mongo/util/platform_init.cpp
@@ -14,15 +14,25 @@
 *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-#ifdef _WIN32
+#if defined(_WIN32)
 #include <crtdbg.h>
 #include <stdlib.h>
+
+#include "mongo/util/stacktrace.h"
+#endif
+
+#if defined(__sunos__)
+#include <dlfcn.h>
+#include <string>
+
+#include "mongo/base/status.h"
+#include "mongo/platform/strcasestr.h"
+#include "mongo/util/log.h" // only needed if logging (debugging)
 #endif
 
 #include "mongo/base/init.h"
-#include "mongo/util/stacktrace.h"
 
-#ifdef _WIN32
+#if defined(_WIN32)
 
 namespace mongo {
 
@@ -40,3 +50,45 @@ namespace mongo {
 } // namespace mongo
 
 #endif // _WIN32
+
+#if defined(__sunos__)
+
+namespace mongo {
+
+    MONGO_INITIALIZER(SolarisDynamicLinks)(InitializerContext*) {
+
+    /*    Support run-time dynamic linking to functions that may or may not be present.
+     *
+     *    Some functions are available on Solaris 11 but not on Solaris 10.  In order to
+     *    ship a single binary that runs on both versions, we do not generate load-time
+     *    references to these functions but instead probe for them at run-time and either
+     *    call them if available of provide fallback behavior if not available.
+     */
+
+        // try to find some functions (should be in libc.so.1 if found)
+        static const char* libraryName = "/lib/64/libc.so.1";
+        void* libraryHandle = dlopen(libraryName, RTLD_LAZY);
+        //log() << "Library '" << libraryName << "' "
+        //      << (std::string((libraryHandle != NULL) ? "was" : "was NOT" ))
+        //      << " found" << std::endl;
+        if (libraryHandle == NULL) {
+            return Status::OK();
+            //return Status(ErrorCodes::InternalError, "Library not found");
+        }
+        static const char* functionName = "strcasestr";
+        void* functionAddress = dlsym(libraryHandle, functionName);
+
+        // note whether or not it was found
+        //log() << "Symbol '" << functionName << "' "
+        //      << (std::string((functionAddress != NULL) ? "was" : "was NOT" ))
+        //      << " found in '" << libraryName << "'" << std::endl;
+
+        if (functionAddress != NULL) {
+            dynamic::strcasestr = functionAddress;
+        }
+        return Status::OK();
+    }
+
+} // namespace mongo
+
+#endif // __sunos__
